# whisper-overlay

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  realtime-stt-server.py
nix/: devshell.nix
nix/homeManagerModules/: realtime-stt-server.nix
nix/nixosModules/: realtime-stt-server.nix
src/: app.rs  cli.rs  hotkeys.rs  keyboard.rs  main.rs  shortcuts.rs  style.css  util.rs  waybar.rs  x.rs
