[package]
name = "whisper-overlay"
version = "1.0.0"
edition = "2021"
authors = ["oddlama <oddlama@oddlama.org>"]
description = "A wayland overlay providing a hotkey for live speech-to-text input via faster-whisper"
license = "MIT"

[dependencies]
async-channel = "2.3.1"
bytemuck = "1.16.0"
clap = { version = "4.5.7", features = ["derive"] }
color-eyre = "0.6.3"
cpal = "0.15.3"
evdev = { version = "0.12.2", features = ["tokio"] }
gdk = { version = "0.8.2", package = "gdk4", features = ["v4_14"] }
gdk-wayland = { version = "0.8.2", package = "gdk4-wayland", features = ["wayland_crate", "v4_12"] }
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
gtk-layer-shell = { version = "0.3.0", package = "gtk4-layer-shell" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "io-util", "sync", "time"] }
